Fixed minor chat screen overflow error

--- a/resources/sources/css/chat-ui.css
+++ b/resources/sources/css/chat-ui.css
@@ -19,11 +19,51 @@
 */
 
 #slide03 {
+    padding-top: 0;
     height:100vh;
 }
 
+/* Loading elements (that will be destroyed) */
+
+#loading-screen {
+    padding-top: 5em;
+}
+
+/*
+    Chat loading
+    Uses fancy keyframes to create a dynamic loading interface that goes:
+    dot, dot dot, dot dot dot, and so on ;)
+*/
+.loading:after {
+  content: ' .';
+  animation: dots 1s steps(5, end) infinite;
+}
+
+@keyframes dots {
+    0%, 20% {
+        color: rgba(0,0,0,0);
+        text-shadow:
+        .25em 0 0 rgba(0,0,0,0),
+        .5em 0 0 rgba(0,0,0,0);}
+    40% {
+        color: white;
+        text-shadow:
+        .25em 0 0 rgba(0,0,0,0),
+        .5em 0 0 rgba(0,0,0,0);}
+    60% {
+        text-shadow:
+        .25em 0 0 white,
+        .5em 0 0 rgba(0,0,0,0);}
+    80%, 100% {
+        text-shadow:
+        .25em 0 0 white,
+        .5em 0 0 white;}
+}
+
+/* Begin styling for chat elements */
+
 #chat-container {
-    height: 79.5vh;
+    height: 92vh;
     overflow-y: auto;
 }
 
