--- a/resources/sources/css/index.css
+++ b/resources/sources/css/index.css
@@ -150,37 +150,6 @@
 }
 
 /*
-    Chat loading
-    Uses fancy keyframes to create a dynamic loading interface that goes:
-    dot, dot dot, dot dot dot, and so on ;)
-*/
-.loading:after {
-  content: ' .';
-  animation: dots 1s steps(5, end) infinite;
-}
-
-@keyframes dots {
-    0%, 20% {
-        color: rgba(0,0,0,0);
-        text-shadow:
-        .25em 0 0 rgba(0,0,0,0),
-        .5em 0 0 rgba(0,0,0,0);}
-    40% {
-        color: white;
-        text-shadow:
-        .25em 0 0 rgba(0,0,0,0),
-        .5em 0 0 rgba(0,0,0,0);}
-    60% {
-        text-shadow:
-        .25em 0 0 white,
-        .5em 0 0 rgba(0,0,0,0);}
-    80%, 100% {
-        text-shadow:
-        .25em 0 0 white,
-        .5em 0 0 white;}
-}
-
-/*
     Minimalistic footer styling. Essentially just centers the text and makes
     the <a> links slightly prettier. Note: the footer is slightly rotated to
     make it look good with the rotated envelope on top of it
